--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-i18n-auto",
-  "version": "0.1.1",
-  "description": "react-i18n-auto 中文国际化自动化，babel插件",
+  "version": "1.0.1",
+  "description": "react-i18n-auto 中文国际化自动化，webpack+babel插件",
   "Keywords": "react,babel,webpack,i18n,国际化",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./test/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,29 @@
   "bugs": {
     "url": "https://github.com/mr18/react-i18n-auto/issues"
   },
-  "homepage": "https://github.com/mr18/react-i18n-auto#readme"
+  "homepage": "https://github.com/mr18/react-i18n-auto#readme",
+  "devDependencies": {},
+  "dependencies": {
+    "react": "^16.13.1",
+    "chalk": "^3.0.0",
+    "ora": "^4.0.3",
+    "xlsx": "^0.15.6",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.6",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/plugin-syntax-async-generators": "^7.8.4",
+    "@babel/plugin-syntax-class-properties": "^7.8.3",
+    "@babel/plugin-syntax-decorators": "^7.8.3",
+    "@babel/plugin-syntax-do-expressions": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-export-extensions": "^7.0.0-beta.32",
+    "@babel/plugin-syntax-flow": "^7.8.3",
+    "@babel/plugin-syntax-function-bind": "^7.8.3",
+    "@babel/plugin-syntax-function-sent": "^7.8.3",
+    "@babel/plugin-syntax-jsx": "^7.8.3",
+    "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
+
+  }
 }
