--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@babel/plugin-syntax-function-bind": "^7.8.3",
     "@babel/plugin-syntax-function-sent": "^7.8.3",
     "@babel/plugin-syntax-jsx": "^7.8.3",
-    "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
+    "@babel/plugin-syntax-object-rest-spread": "^7.8.3"
 
   }
 }
