--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
     "@babel/plugin-syntax-function-bind": "^7.8.3",
     "@babel/plugin-syntax-function-sent": "^7.8.3",
     "@babel/plugin-syntax-jsx": "^7.8.3",
-    "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
+    "@babel/plugin-syntax-object-rest-spread": "^7.8.3"
   }
 }
