--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-i18n-auto",
   "version": "1.1.1",
   "description": "react-i18n-auto 中文国际化自动化，webpack+babel插件",
-  "Keywords": "react,babel,webpack,i18n,国际化",
+  "Keywords": ["react","babel","webpack","i18n","国际化"],
   "main": "index.js",
   "scripts": {
     "test": "node ./test/index.js"
