--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "Keywords": ["react","babel","webpack","i18n","国际化"],
   "main": "index.js",
   "scripts": {
-    "test": "node ./test/index.js"
+    "test": "node ./test/i18n.config.js"
   },
   "repository": {
     "type": "git",
