--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "xlsx": "^0.15.6",
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.6",
+    "@babel/types": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
