--- a/demo/package.json
+++ b/demo/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.2.1",
+    "html-webpack-plugin": "^4.5.0",
     "react-i18n-auto": "^1.1.3",
     "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0"
