--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "bugs": {
     "url": "https://github.com/mr18/react-i18n-auto/issues"
   },
+  "publishConfig": {
+    "registry":"git://github.com/mr18/react-i18n-auto.git"
+  },
   "homepage": "https://github.com/mr18/react-i18n-auto#readme",
   "devDependencies": {},
   "dependencies": {
