--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "babel plugin",
     "webpack",
     "国际化"
-  ], 
+  ],
   "main": "./src/index.js",
   "scripts": {
     "test": "node ./test/i18n.config.js"
@@ -29,7 +29,7 @@
   "dependencies": {
     "react": "^16.13.1",
     "ora": "^4.0.3",
-    "xlsx": "^0.17.4"
+    "xlsx": "^0.17.4",
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.6",
     "@babel/types": "^7.9.0",
